fixed deprecated operations, commented unused pathToURL method